fix spacing for sidebar items

--- a/style.css
+++ b/style.css
@@ -23,21 +23,19 @@ main{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
-    grid-template-rows: auto 1fr 2fr;
-
+    grid-template-rows: auto auto 1fr;
+    gap: 40px;
 }
 
 #sidebar > *{
-    border: solid 1px red;
+    padding: 16px;
 }
 
 #sidebar > .logo{
-    padding: 4px;
-    border: solid 2px green;
     display: grid;
     grid-template-columns: 40px auto;
     align-items: center;
-    gap: 6px;
+    gap: 16px;
 }
 
 #sidebar > .logo img{
@@ -49,16 +47,11 @@ main{
     grid-column: 2 / 3;
 }
 
-#sidebar > .top,
-#sidebar > .bottom{
-
-}
-
 #sidebar > ul > *{
     font-size: 24px;
-    padding: 4px;
+    margin: 8px 0;
+    list-style: none;
 }
-
 
 .sb-item > img{
     max-width: 16px;
@@ -67,7 +60,7 @@ main{
 .sb-item > a {
     text-decoration: none;
     color: var(--light-white);
-    padding: 4px;
+    margin-left: 12px; 
 }
 
 
